k8s/deploiment.yaml
apiVersion: apps/v
kind: Deployment
metadata:
  name: angular-frontend
  labels:
    app: angualr-frontend
spec:
  replicas: 2
  selector : 
    matchLabels:
      app: angular-frontend
    spec:
      containers:
        - name: angular-frontend
          image: rima603/frontdevops:latest
          ports:
            - containerPort: 80
