k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontapp
  labels:
    app: frontapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontapp
  template:
    metadata:
      labels:
        app: frontapp
    spec:
      containers:
        - name: frontapp
          image: rima603/frontdevops:latest
          ports:
            - containerPort: 80
