k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angualr-frontend
spec:
  selector:
    app: angular-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80 
  type: ClusterIP
